--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li class="nav-item"><a class="nav-link" href="#logistics"><font color="black">Logistics</font></a></li>
         <li class="nav-item"><a class="nav-link" href="#policies"><font color="black">Policies</font></a></li>
         <li class="nav-item"><a class="nav-link" href="calendar.html"><font color="black">Schedule/Calendar</font></a></li>
-        <li class="nav-item"><a class="nav-link" href="https://piazza.com/class/jqmk74eo45545v"><font color="black">Piazza</font></a></li>
+        <li class="nav-item"><a class="nav-link" href="piazza.com/cmu/spring2020/10707/home"><font color="black">Piazza</font></a></li>
       </ul>
     </div>
   </nav>
